--- a/src/components/BaoWeiCharts/css/index.css
+++ b/src/components/BaoWeiCharts/css/index.css
@@ -25,43 +25,58 @@ body {
   background: #ebeef5;
 }
 /*框架布局*/
+#bao-wei-charts {
+  height: 100%;
+}
+.KFQ_wrap {
+  height: 100%;
+}
 .KFQ_wrap .el-header {
   width: 100%;
-  height: 51px;
-  padding-top: 9px;
+  height: 38px !important;
+  background: url(../images/顶部.png) no-repeat center;
+  background-size: cover;
   background-color: #ffffff;
   box-shadow: 2px 0px 10px rgba(0, 0, 0, 0.34901961);
   display: flex;
   justify-content: space-between;
 }
 .KFQ_wrap .el-header .logo {
-  height: 51px;
-  line-height: 51px;
+  height: 38px;
+  line-height: 38px;
   width: 377px;
+  display: flex;
+  justify-items: center;
+}
+.KFQ_wrap .el-header .logo img {
+  height: 24px;
+  margin-top: 6px;
 }
 .KFQ_wrap .el-header .logo span {
-  font-size: 20px;
+  font-size: 16px;
   font-weight: 600;
   padding-right: 10px;
+  padding-left: 3px;
+  color: white;
 }
 .KFQ_wrap .el-header .logo .menu_icon {
-  font-size: 20px;
+  font-size: 18px;
   font-weight: 500;
+  margin-top: 8px;
   cursor: pointer;
 }
 .KFQ_wrap .el-header .header_menu {
   display: flex;
-  height: 51px;
+  height: 38px;
 }
 .KFQ_wrap .el-header .header_menu li {
   width: 130px;
-  height: 51px;
-  background-color: #ffffff;
+  height: 38px;
   font-size: 15px;
   text-align: center;
-  line-height: 51px;
-  color: #7f7f7f;
-  border-left: 1px solid #7f7f7f;
+  line-height: 38px;
+  color: white;
+  border-left: 1px solid white;
   cursor: pointer;
 }
 .KFQ_wrap .el-header .header_menu li:first-child {
@@ -69,11 +84,12 @@ body {
 }
 .KFQ_wrap .el-header .header_menu li.active {
   font-weight: 700;
-  border-bottom: 4px solid;
-  height: 47px;
+  border-bottom: 3px solid #ffcd49;
+  height: 35px;
+  color: #ffcd49;
 }
 .KFQ_wrap .el-header .personal_information {
-  line-height: 51px;
+  line-height: 38px;
 }
 .KFQ_wrap .el-header .personal_information img {
   vertical-align: middle;
@@ -82,12 +98,25 @@ body {
   cursor: pointer;
 }
 .KFQ_wrap .el-aside {
-  height: calc(100vh - 60px);
+  height: 100%;
   background: white;
   position: relative;
   overflow: visible;
   padding: 0;
   margin-bottom: 0;
+}
+.KFQ_wrap .el-aside .el-menu-item {
+  color: white;
+}
+.KFQ_wrap .el-aside .el-menu-item.is-active {
+  color: white;
+  background-color: #1890ff;
+}
+.KFQ_wrap .el-aside .el-menu-item:hover,
+.KFQ_wrap .el-aside .el-menu-item:focus {
+  outline: none;
+  color: white;
+  background-color: #1890ff;
 }
 .KFQ_wrap .el-aside .menu_control {
   position: absolute;
@@ -109,7 +138,7 @@ body {
   padding-right: 2px;
 }
 .KFQ_wrap .el-main {
-  height: calc(100vh - 60px);
+  height: 100%;
   position: relative;
   padding: 8px;
   overflow: auto;
@@ -158,15 +187,16 @@ body {
   height: auto;
   padding-bottom: 10px;
 }
-.pageSetting .el-drawer {
+#bao-wei-charts .pageSetting .el-drawer {
   width: 265px !important;
+  position: absolute;
 }
-.pageSetting .assembly_wrap {
+#bao-wei-charts .pageSetting .assembly_wrap {
   margin-left: 20px;
   display: flex;
   justify-content: flex-start;
 }
-.pageSetting .assembly_wrap li {
+#bao-wei-charts .pageSetting .assembly_wrap li {
   width: 100px;
   height: 80px;
   padding: 10px 0;
@@ -177,15 +207,15 @@ body {
   background: white;
   margin: 5px;
 }
-.pageSetting .assembly_wrap li i {
+#bao-wei-charts .pageSetting .assembly_wrap li i {
   font-size: 40px;
   line-height: 50px;
 }
-.pageSetting .assembly_wrap li p {
+#bao-wei-charts .pageSetting .assembly_wrap li p {
   font-size: 16px;
   line-height: 30px;
 }
-.pageSetting .assembly_wrap li .mengban {
+#bao-wei-charts .pageSetting .assembly_wrap li .mengban {
   position: absolute;
   width: 100px;
   height: 100px;
@@ -199,7 +229,7 @@ body {
   line-height: 100px;
   color: white;
 }
-.pageSetting .assembly_wrap li:hover .mengban {
+#bao-wei-charts .pageSetting .assembly_wrap li:hover .mengban {
   display: block;
 }
 /*queryStatistics*/
@@ -229,11 +259,11 @@ body {
 .statisticsWrap {
   border-width: 0px;
   width: 336px;
-  padding: 10px 20px;
+  overflow: hidden;
   background: inherit;
   background-color: #ffffff;
   border: none;
-  border-radius: 10px;
+  border-radius: 5px;
   box-shadow: 0px 0px 5px rgba(123, 117, 117, 0.54);
 }
 .statisticsWrap .icontuozhuai {
@@ -249,15 +279,23 @@ body {
 .statistics_title {
   height: 28px;
   border-bottom: 1px solid #d8d8d8;
-  position: relative;
+  padding: 10px 20px 0;
+  background: #f5f7fa;
 }
 .statistics_title .el-icon-close {
   position: absolute;
   font-size: 20px;
-  right: -18px;
-  top: -8px;
+  right: 0;
+  top: 0;
   color: #a5a3a3;
   cursor: pointer;
+}
+.statistics_title .more {
+  font-size: 14px;
+  display: inline-block;
+  width: 28px;
+  cursor: pointer;
+  color: #a5a3a3;
 }
 .statistics_title .box {
   height: 20px;
@@ -303,7 +341,6 @@ body {
 }
 .statistics_title .box .pic {
   position: relative;
-  margin-right: 5px;
 }
 .statistics_title .box .pic .t_list {
   position: absolute;
@@ -430,10 +467,14 @@ body {
   width: 100%;
   height: 100%;
 }
+.statisticsWrapCase2 .statisticsBox .statistics-content {
+  padding: 0 20px 10px;
+}
 .statisticsWrapCase2 .suofang {
   position: absolute;
   height: 30px;
   width: 30px;
+  z-index: 9999999;
 }
 .statisticsWrapCase2 .suofang:hover .iconfont {
   display: block;
@@ -455,9 +496,62 @@ body {
 .suofang-left:hover {
   cursor: ne-resize;
 }
+/*字段配置、参数配置公共样式*/
+.zdpz_list {
+  display: inline-block;
+  border-right: 1px solid #c1c1c1;
+  border-bottom: 1px solid #c1c1c1;
+}
+.zdpz_list li {
+  display: flex;
+  justify-items: center;
+  padding: 0;
+  line-height: 32px;
+  height: 32px;
+}
+.zdpz_list li > span {
+  display: block;
+  border-left: 1px solid #c1c1c1;
+  border-top: 1px solid #c1c1c1;
+  width: 60px;
+  height: auto;
+  text-align: center;
+}
+.zdpz_list li .hTxt9 {
+  width: 100px;
+}
+.zdpz_list .zdpz_list_header .icons {
+  font-size: 24px;
+  cursor: pointer;
+}
+.zdpz_list .zdpz_list_content .el-input {
+  width: 100%;
+  display: block;
+}
+.zdpz_list .zdpz_list_content .input-with-select {
+  position: relative;
+}
+.zdpz_list .zdpz_list_content .input-with-select .el-input-group__append {
+  z-index: 999;
+  position: absolute;
+  right: 1px;
+  top: 1px;
+  height: 26px;
+  line-height: 28px;
+  text-align: center;
+}
+.zdpz_list .zdpz_list_content .input-with-select .el-input-group__append .el-button {
+  padding: 0;
+}
+.zdpz_list .zdpz_list_content .el-input__inner {
+  padding: 0 5px;
+  height: 30px;
+  line-height: 30px;
+  display: block;
+}
 /* settingForm  start*/
 .settingForm .el-dialog {
-  width: 730px;
+  width: 1200px;
 }
 .settingForm .el-dialog__body {
   max-height: 500px;
@@ -477,69 +571,154 @@ body {
 .settingForm .el-form-item__content {
   line-height: 34px;
 }
-.settingForm .zdpz_box.mt {
-  margin-top: 12px;
+.settingForm .content-dy-box {
+  padding: 5px;
+  border: 1px solid #c1c1c1;
+  border-radius: 5px;
 }
-.settingForm .zdpz_box .el-form-item__content {
-  position: relative;
-}
-.settingForm .zdpz_box .el-form-item__content .tips {
-  position: absolute;
-  font-size: 12px;
-  top: -25px;
-  left: 0;
-  color: #e6a23c;
-  height: 0;
-}
-.settingForm .zdpz_list {
-  display: inline-block;
+.settingForm .details-table-list,
+.settingForm .top-bar-setting-list {
+  display: block;
   border-right: 1px solid #c1c1c1;
   border-bottom: 1px solid #c1c1c1;
 }
-.settingForm .zdpz_list li {
+.settingForm .details-table-list li,
+.settingForm .top-bar-setting-list li {
   display: flex;
   justify-items: center;
 }
-.settingForm .zdpz_list li .hTxt {
+.settingForm .details-table-list li .hTxt,
+.settingForm .top-bar-setting-list li .hTxt {
   display: block;
   border-left: 1px solid #c1c1c1;
   border-top: 1px solid #c1c1c1;
-  width: 60px;
+  width: 100px;
   height: auto;
   text-align: center;
+  line-height: 28px;
+  padding: 1px 3px;
 }
-.settingForm .zdpz_list li .hTxt.icons {
-  width: 120px;
+.settingForm .details-table-list li .hTxt.icons,
+.settingForm .top-bar-setting-list li .hTxt.icons {
+  width: 100px;
 }
-.settingForm .zdpz {
-  padding: 0;
-  line-height: 32px;
-  height: 32px;
+.settingForm .details-table-list li .hTxt01,
+.settingForm .top-bar-setting-list li .hTxt01 {
+  width: 75px;
 }
-.settingForm .zdpz .el-input {
+.settingForm .details-table-list li .hTxt01 .el-input-number--small,
+.settingForm .top-bar-setting-list li .hTxt01 .el-input-number--small {
   width: 100%;
-  display: block;
 }
-.settingForm .zdpz .el-input__inner {
-  padding: 0 5px;
-  height: 30px;
-  line-height: 30px;
-  display: block;
+.settingForm .details-table-list li .hTxt01 .el-input-number.is-controls-right .el-input__inner,
+.settingForm .top-bar-setting-list li .hTxt01 .el-input-number.is-controls-right .el-input__inner {
+  padding-left: 5px;
+  padding-right: 35px;
 }
-.settingForm .zdpz .icons {
+.settingForm .details-table-list li .hTxt05,
+.settingForm .top-bar-setting-list li .hTxt05 {
+  width: 60px;
+}
+.settingForm .details-table-list li .hTxt06,
+.settingForm .top-bar-setting-list li .hTxt06 {
   font-size: 22px;
-  width: 51px;
-  height: 30px;
 }
-.settingForm .zdpz .icons i {
+.settingForm .details-table-list li .hTxt06 i,
+.settingForm .top-bar-setting-list li .hTxt06 i {
   cursor: pointer;
 }
-.settingForm .zdpz .icons i.disabled {
+.settingForm .details-table-list li .hTxt06 i.disabled,
+.settingForm .top-bar-setting-list li .hTxt06 i.disabled {
   cursor: no-drop;
   color: #c0c4cc;
 }
-.settingForm .zdpz .icons i.remove {
+.settingForm .details-table-list li .hTxt06 i.remove,
+.settingForm .top-bar-setting-list li .hTxt06 i.remove {
   color: red;
+}
+.settingForm .details-table-list li.box-shadow-error,
+.settingForm .top-bar-setting-list li.box-shadow-error {
+  box-shadow: 0 0 5px red;
+}
+/*接口参数配置--树形弹窗*/
+.param-tree-dialog .el-dialog {
+  width: 700px;
+}
+.param-tree-dialog .el-dialog .el-tree .param-tree-node {
+  display: flex;
+  width: 100%;
+}
+.param-tree-dialog .el-dialog .el-tree .param-tree-node > span {
+  display: block lin;
+}
+.param-tree-dialog .el-dialog .el-tree .param-tree-node .txt1 {
+  font-size: 16px;
+}
+.param-tree-dialog .el-dialog .el-tree .param-tree-node .txt2 {
+  width: 400px;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  height: 20px;
+  font-size: 12px;
+  position: relative;
+  top: 2px;
+}
+.param-tree-dialog .el-dialog .el-tree .is-checked {
+  background: #f5f8fb;
+}
+/*字段配置列表*/
+.keys-config-setting .tips {
+  height: 12px;
+  width: 100%;
+  font-size: 12px;
+  color: #e6a23c;
+}
+.keys-config-setting .zdhq-btn {
+  margin-bottom: 12px;
+}
+.keys-config-list .icons {
+  font-size: 22px;
+  width: 110px;
+  height: 30px;
+}
+.keys-config-list .icons i {
+  cursor: pointer;
+}
+.keys-config-list .icons i.disabled {
+  cursor: no-drop;
+  color: #c0c4cc;
+}
+.keys-config-list .icons i.remove {
+  color: red;
+}
+.fieldset-list {
+  display: flex;
+  justify-content: center;
+}
+/*iframe配置*/
+.iframe-dy-box .fieldset-list {
+  justify-content: left;
+  margin-left: 130px;
+}
+.iframe-dy-box .fieldset-list .zdpz_list li > span:nth-child(3) {
+  width: 300px;
+}
+/*模块配置--参数配置*/
+.param-config-setting {
+  margin-right: 10px;
+}
+.param-config-setting > .el-button {
+  margin-bottom: 12px;
+}
+.param-config-setting .param-config-list li > span:first-child {
+  width: 80px;
+}
+.param-config-setting .param-config-list li > span:nth-child(2) {
+  width: 100px;
+}
+.param-config-setting .param-config-list li > span:nth-child(3) {
+  width: 130px;
 }
 /*饼图、环图模块配置*/
 .v_chart_pie .choose {
@@ -577,7 +756,7 @@ body {
 }
 /*screenForm*/
 .screenForm .el-dialog {
-  width: 900px;
+  width: 1000px;
 }
 .screenForm .el-dialog .el-input__inner {
   padding: 0 5px;
@@ -709,8 +888,6 @@ body {
 /*判断弹窗组件*/
 .judge-pop-model .el-dialog {
   width: 450px;
-  top: calc(50vh - 62px);
-  margin-top: 0 !important;
 }
 .judge-pop-model .el-dialog__body .content i,
 .judge-pop-model .el-dialog__body .content .txt1 {
@@ -812,12 +989,12 @@ body {
   opacity: 0.8;
 }
 .detail_box .page_prev {
-  left: -20px;
+  left: -10px;
   right: auto;
 }
 .detail_box .page_next {
   left: auto;
-  right: -20px;
+  right: -10px;
 }
 .detail_box .page_prev.first,
 .detail_box .page_next.last {
@@ -882,7 +1059,6 @@ body {
 /*查询模块样式*/
 .static-where-2 {
   display: flex;
-  border-bottom: 1px solid #c1c1c1;
   width: 100%;
   justify-content: space-between;
   overflow: hidden;
@@ -913,6 +1089,10 @@ body {
 .static-where-2 .where-form .el-radio-group label {
   margin-right: 10px;
 }
+.static-where-2 .where-form .el-date-editor--date input,
+.static-where-2 .where-form .el-date-editor--datetime input {
+  text-indent: 24px;
+}
 .static-where-2 .where-form .el-checkbox-group {
   margin-top: 5px;
   padding: 0 2px;
@@ -936,4 +1116,141 @@ body {
   height: 32px;
   margin-top: 5px;
   margin-left: 10px;
+}
+/*顶部栏样式配置*/
+.top-bar-wrap {
+  position: relative;
+  z-index: 9;
+}
+.top-bar-wrap .operation {
+  position: absolute;
+  top: 0;
+  right: 0;
+  z-index: 99;
+  display: inline-block;
+  background: #ffffffbd;
+  display: none;
+}
+.top-bar-wrap .operation i {
+  font-size: 24px;
+  cursor: pointer;
+  padding: 0 2px;
+}
+.top-bar-wrap .operation .el-icon-delete {
+  color: red;
+}
+.top-bar-wrap:hover .operation {
+  display: block;
+}
+.top-bar-wrap .top-bar-box {
+  display: flex;
+  width: 100%;
+}
+.top-bar-wrap .top-bar-box li {
+  flex: 1;
+  margin-left: 5px;
+  padding: 5px;
+  border-radius: 5px;
+  min-height: 80px;
+  background: url(../images/u771.png);
+  background-size: 100% 100%;
+  color: white;
+  text-align: center;
+}
+.top-bar-wrap .top-bar-box li > .list-box {
+  position: relative;
+  top: 50%;
+  transform: translateY(-50%);
+}
+.top-bar-wrap .top-bar-box li .test {
+  display: flex;
+  justify-content: center;
+}
+.top-bar-wrap .top-bar-box li .txt1 {
+  font-size: 16px;
+  margin-bottom: 10px;
+}
+.top-bar-wrap .top-bar-box li .txt2 {
+  font-size: 20px;
+  font-weight: 700;
+}
+.top-bar-wrap .top-bar-box li .txt2 .t1 {
+  font-weight: 500;
+}
+.top-bar-wrap .top-bar-box li .txt2 .t2 {
+  font-size: 14px;
+  font-weight: 500;
+}
+.top-bar-wrap .top-bar-box li .txt3 {
+  font-size: 14px;
+  font-weight: 700;
+  flex: 1;
+  margin-left: 5px;
+  border-left: 1px solid #c1c1c1;
+}
+.top-bar-wrap .top-bar-box li .txt3 .t1 {
+  font-weight: 500;
+}
+.top-bar-wrap .top-bar-box li .txt3 .t2 {
+  font-size: 12px;
+  font-weight: 500;
+}
+.top-bar-wrap .top-bar-box li .txt3:first-child {
+  margin-left: 0;
+  border: none;
+}
+.top-bar-wrap .top-bar-box li:nth-child(2n) {
+  background: url(../images/u772.png);
+  background-size: 100% 100%;
+}
+.top-bar-wrap .top-bar-box li:first-child {
+  margin-left: 0;
+}
+/*顶部栏编辑弹窗样式*/
+.top-bar-setting .el-dialog {
+  width: 1200px;
+}
+.top-bar-setting .el-dialog .el-form {
+  display: block;
+  width: 100%;
+}
+.top-bar-setting .el-dialog .setting-box {
+  width: 100%;
+}
+.top-bar-setting .el-dialog .top-bar-setting-box {
+  display: block;
+}
+.top-bar-setting .el-dialog .top-bar-setting-box .warning {
+  color: #e6a23c;
+}
+.top-bar-setting .el-dialog .top-bar-setting-list {
+  margin-left: 0;
+}
+.top-bar-setting .el-dialog .top-bar-setting-list .txt2 {
+  width: 150px;
+}
+/*iframe嵌入*/
+.static-iframe {
+  display: block;
+  width: 100%;
+}
+.iframe-statistics-wrap {
+  padding: 0;
+  border-radius: 0;
+}
+.iframe-statistics-wrap .statistics_title {
+  display: none;
+  position: absolute;
+  padding: 5px 10px 0;
+  width: calc(100% - 22px);
+  top: 2px;
+  left: 2px;
+  z-index: 8;
+  background: #f5f8fb;
+}
+.iframe-statistics-wrap .statisticsBox .statistics-content {
+  padding: 0;
+}
+.iframe-statistics-wrap:hover .statistics_title {
+  display: block;
 }
