--- a/src/components/BaoWeiCharts/css/index.less
+++ b/src/components/BaoWeiCharts/css/index.less
@@ -22,6 +22,9 @@ body {
 .cursor-pointer {
   cursor: pointer;
 }
+.warning-color {
+  color: #f69e37;
+}
 @bg: #ebeef5;
 @border: #c1c1c1;
 .theme-bg {
@@ -32,7 +35,6 @@ body {
   height: 100%;
 }
 @headerHeight: 38px;
-
 .KFQ_wrap {
   height: 100%;
   .el-header {
@@ -453,7 +455,8 @@ body {
     }
   }
   .el-table__row .cell {
-    height: 23px;
+    height: 26px;
+    line-height: 26px;
     overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
@@ -495,7 +498,11 @@ body {
     border-bottom: 1px solid #d8d8d8;
   }
 }
-
+.right-operate-button {
+  .el-button--mini {
+    padding: 5px 10px;
+  }
+}
 /*详情模块*/
 .YDFLStatistics,
 .YDGCStatistics2 {
@@ -675,7 +682,9 @@ body {
   .el-form-item {
     margin-bottom: 5px;
   }
-
+  .el-row-menu-tap {
+    margin-top: 5px;
+  }
   .el-form-item__content {
     line-height: 34px;
   }
@@ -891,7 +900,13 @@ body {
 /*screenForm*/
 .screenForm {
   .el-dialog {
-    width: 1000px;
+    width: 1100px;
+    .screenForm-top {
+      margin-bottom: 15px;
+    }
+    .form-setting {
+      margin-bottom: 15px;
+    }
     .el-input__inner {
       padding: 0 5px;
     }
@@ -933,54 +948,58 @@ body {
   fieldset {
     padding: 5px 10px;
   }
-  .form-table {
-    display: block;
-    // margin: 0 auto;
-    /*为表格设置合并边框模型*/
-    border-collapse: collapse;
-    /*列宽由表格宽度和列宽度设定*/
-    table-layout: fixed;
-    td {
-      border: 1px solid #999999;
-      /*允许在单词内换行。*/
-      word-break: break-word;
-      line-height: 28px;
-    }
-    .t-header {
-      text-align: center;
-    }
-    .t-head-cz-icon {
-      font-size: 18px;
-      // color: #f56c6c;
-      cursor: pointer;
-    }
+}
+.form-table {
+  display: block;
+  // margin: 0 auto;
+  /*为表格设置合并边框模型*/
+  border-collapse: collapse;
+  /*列宽由表格宽度和列宽度设定*/
+  table-layout: fixed;
+  td {
+    border: 1px solid #999999;
+    /*允许在单词内换行。*/
+    word-break: break-word;
+    // line-height: 28px;
   }
-  .other-btn-table {
-    width: 380px;
-    .t-head {
-      text-align: center;
-      .t-head-cz {
-        i {
-          font-size: 18px;
-          // color: #f56c6c;
-          cursor: pointer;
-        }
-      }
-    }
-    .t-body-cz {
-      text-align: center;
+  td.sfxjcx {
+    text-align: center;
+  }
+  .t-header {
+    text-align: center;
+  }
+  .t-head-cz-icon {
+    font-size: 18px;
+    // color: #f56c6c;
+    cursor: pointer;
+  }
+}
+/*筛选其他按钮配置、列表、表格右侧按钮配置*/
+.other-btn-table {
+  // width: 380px;
+  .t-head {
+    text-align: center;
+    .t-head-cz {
       i {
         font-size: 18px;
+        // color: #f56c6c;
         cursor: pointer;
       }
-      i.disabled {
-        cursor: no-drop;
-        color: #c0c4cc;
-      }
+    }
+  }
+  .t-body-cz {
+    text-align: center;
+    i {
+      font-size: 18px;
+      cursor: pointer;
+    }
+    i.disabled {
+      cursor: no-drop;
+      color: #c0c4cc;
+    }
 
-      i.remove {
-        color: red;
-      }
+    i.remove {
+      color: red;
     }
   }
 }
@@ -999,7 +1018,21 @@ body {
     }
   }
 }
-
+/*表格、列表右侧按钮配置模块*/
+.operate-button-setting-dialog {
+  .el-dialog {
+    width: 600px;
+    .operate-button-table {
+      width: auto;
+    }
+  }
+}
+/*按钮事件js脚本配置*/
+.js-methods-setting-dialog {
+  .el-dialog {
+    width: 500px;
+  }
+}
 /*staticWhere*/
 .staticWhere {
   position: absolute;
@@ -1271,7 +1304,7 @@ body {
     .el-form-item__content {
       // line-height: 32px;
     }
-    .el-radio-group {
+    .el-radio-group.border {
       padding: 6px 2px;
       border: 1px solid @border;
       border-radius: 5px;
@@ -1280,6 +1313,10 @@ body {
         margin-right: 10px;
       }
     }
+    .el-radio {
+      margin-right: 0;
+      margin-left: 5px;
+    }
     .el-date-editor--date,
     .el-date-editor--datetime {
       input {
@@ -1287,15 +1324,19 @@ body {
       }
     }
     .el-checkbox-group {
-      margin-top: 5px;
-      padding: 0 2px;
+      margin-top: 3px;
+      // padding: 0 2px;
       display: flex;
-      border: 1px solid @border;
-      border-radius: 5px;
-      height: 28px;
-      line-height: 28px;
-      label {
+      // border: 1px solid @border;
+      // border-radius: 5px;
+      height: 30px;
+      line-height: 30px;
+      .el-checkbox {
         margin-right: 10px;
+      }
+      .el-checkbox.is-bordered {
+        margin-right: 0;
+        line-height: 20px;
       }
     }
   }
