菜单模块配置修改提交

--- a/src/components/BaoWeiCharts/css/index.less
+++ b/src/components/BaoWeiCharts/css/index.less
@@ -1501,3 +1501,14 @@ body {
     display: block;
   }
 }
+
+/*菜单编码弹窗*/
+.menu-form-setting {
+  .el-dialog {
+    width: 600px;
+    margin-top: 150px;
+    .el-form-item {
+      margin-bottom: 20px;
+    }
+  }
+}
