--- a/src/components/BaoWeiCharts/css/index.css
+++ b/src/components/BaoWeiCharts/css/index.css
@@ -1286,3 +1286,11 @@ body {
 .iframe-statistics-wrap:hover .statistics_title {
   display: block;
 }
+/*菜单编码弹窗*/
+.menu-form-setting .el-dialog {
+  width: 600px;
+  margin-top: 150px;
+}
+.menu-form-setting .el-dialog .el-form-item {
+  margin-bottom: 20px;
+}
