--- a/src/components/BaoWeiCharts/css/index.less
+++ b/src/components/BaoWeiCharts/css/index.less
@@ -152,11 +152,11 @@ body {
   .el-main {
     height: 100%;
     position: relative;
-
     padding: 8px;
     overflow: auto;
     .my_main_content {
       height: 100%;
+      position: relative;
     }
   }
 }
@@ -1499,16 +1499,5 @@ body {
   }
   &:hover .statistics_title {
     display: block;
-  }
-}
-
-/*菜单编码弹窗*/
-.menu-form-setting {
-  .el-dialog {
-    width: 600px;
-    margin-top: 150px;
-    .el-form-item {
-      margin-bottom: 20px;
-    }
   }
 }
