--- a/src/components/BaoWeiCharts/css/index.less
+++ b/src/components/BaoWeiCharts/css/index.less
@@ -117,15 +117,21 @@ body {
     overflow: visible;
     padding: 0;
     margin-bottom: 0;
-    .el-menu-item {
+    .el-menu {
+      background: transparent;
+    }
+    .el-menu-item,
+    .el-submenu__title {
       color: white;
+      background: transparent;
     }
     .el-menu-item.is-active {
       color: white;
       background-color: #1890ff;
     }
     .el-menu-item:hover,
-    .el-menu-item:focus {
+    .el-menu-item:focus,
+    .el-submenu__title:hover {
       outline: none;
       color: white;
       background-color: #1890ff;
@@ -143,6 +149,7 @@ body {
       .el-submenu__title {
         height: 40px;
         line-height: 40px;
+        color: white;
         .iconfont {
           padding-right: 2px;
         }
@@ -1499,5 +1506,15 @@ body {
   }
   &:hover .statistics_title {
     display: block;
+  }
+}
+/*菜单编码弹窗*/
+.menu-form-setting {
+  .el-dialog {
+    width: 600px;
+    margin-top: 150px;
+    .el-form-item {
+      margin-bottom: 20px;
+    }
   }
 }
