--- a/src/components/BaoWeiCharts/css/index.less
+++ b/src/components/BaoWeiCharts/css/index.less
@@ -1,17 +1,3 @@
-* {
-  padding: 0;
-  margin: 0;
-  list-style: none;
-  text-decoration: none;
-  outline: none;
-  box-sizing: content-box;
-}
-
-body {
-  font-size: 14px;
-  color: #333333;
-  min-width: 1200px;
-}
 /*鼠标移入样式*/
 .cursor-default {
   cursor: default;
@@ -33,6 +19,13 @@ body {
 /*框架布局*/
 #bao-wei-charts {
   height: 100%;
+  font-size: 14px;
+  padding: 0;
+  margin: 0;
+  list-style: none;
+  text-decoration: none;
+  outline: none;
+  box-sizing: content-box;
 }
 @headerHeight: 38px;
 .KFQ_wrap {
@@ -75,15 +68,16 @@ body {
     .header_menu {
       display: flex;
       height: @headerHeight;
-      // margin-top: 9px;
+      padding: 0;
+      margin: 0;
       li {
         width: 130px;
         width: 130px;
         height: @headerHeight;
         // background-color: rgba(255, 255, 255, 1);
-
+        list-style: none;
         font-size: 15px;
-
+        box-sizing: content-box;
         text-align: center;
         line-height: @headerHeight;
         color: white;
@@ -191,18 +185,23 @@ body {
       left: 0;
     }
     ul {
-      padding-top: @hoverMenuHeight;
+      padding-top: 50px;
+      padding-left: 0;
+      margin: 0;
       background: white;
       border-radius: 25px;
-
       height: 0;
       padding-bottom: 0;
       overflow-y: hidden;
+
       li {
         height: 30px;
         text-align: center;
         line-height: 30px;
         cursor: pointer;
+        list-style: none;
+        padding: 0;
+        margin: 0;
       }
     }
   }
@@ -225,6 +224,7 @@ body {
       margin-left: 20px;
       display: flex;
       justify-content: flex-start;
+      padding: 0;
       li {
         width: @width1;
         height: 80px;
@@ -235,6 +235,7 @@ body {
         position: relative;
         background: white;
         margin: 5px;
+        list-style: none;
         i {
           font-size: 40px;
           line-height: 50px;
@@ -242,6 +243,8 @@ body {
         p {
           font-size: 16px;
           line-height: 30px;
+          padding: 0;
+          margin: 0;
         }
         .mengban {
           position: absolute;
@@ -419,11 +422,12 @@ body {
           background: white;
           border-radius: 5px;
           padding: 5px 0;
-
+          margin: 0;
           li {
             line-height: 24px;
             text-align: center;
             cursor: pointer;
+            list-style: none;
           }
 
           li.active {
@@ -614,12 +618,15 @@ body {
   display: inline-block;
   border-right: 1px solid @border;
   border-bottom: 1px solid @border;
+  padding: 0;
+  margin: 0;
   li {
     display: flex;
     justify-items: center;
     padding: 0;
     line-height: 32px;
     height: 32px;
+    list-style: none;
     & > span {
       display: block;
       border-left: 1px solid @border;
@@ -705,12 +712,12 @@ body {
     display: block;
     border-right: 1px solid @border;
     border-bottom: 1px solid @border;
-    // margin-left: 100px;
-    // max-height: 200px;
-    // overflow: auto;
+    padding: 0;
+    margin: 0;
     li {
       display: flex;
       justify-items: center;
+      list-style: none;
       .hTxt {
         display: block;
         border-left: 1px solid @border;
@@ -793,14 +800,12 @@ body {
 /*字段配置列表*/
 .keys-config-setting {
   .tips {
-    // position: absolute;
     height: 12px;
     width: 100%;
     font-size: 12px;
-    // top: -25px;
-    // left: 0;
+    padding: 0;
+    margin: 0;
     color: #e6a23c;
-    // height: 0;
   }
   .zdhq-btn {
     margin-bottom: 12px;
@@ -1365,7 +1370,7 @@ body {
 /*顶部栏样式配置*/
 .top-bar-wrap {
   position: relative;
-  z-index: 5;
+  z-index: 4;
   .operation {
     position: absolute;
     top: 0;
@@ -1389,6 +1394,8 @@ body {
   .top-bar-box {
     display: flex;
     width: 100%;
+    padding: 0;
+    margin: 0;
     li {
       flex: 1;
       margin-left: 5px;
@@ -1399,10 +1406,15 @@ body {
       background-size: 100% 100%;
       color: white;
       text-align: center;
+      list-style: none;
       > .list-box {
         position: relative;
         top: 50%;
         transform: translateY(-50%);
+        p {
+          padding: 0;
+          margin: 0;
+        }
       }
       .test {
         display: flex;
