--- a/src/components/BaoWeiCharts/css/index.less
+++ b/src/components/BaoWeiCharts/css/index.less
@@ -33,11 +33,11 @@
   .el-header {
     width: 100%;
     height: @headerHeight !important;
-    background: url(../images/顶部.png) no-repeat center;
-    background-size: cover;
-    // padding-top: 9px;
-    background-color: rgba(255, 255, 255, 1);
-    box-shadow: 2px 0px 10px rgba(0, 0, 0, 0.349019607843137);
+    // background: url(../images/顶部.png) no-repeat center;
+    // background-size: cover;
+    // // padding-top: 9px;
+    // background-color: rgba(255, 255, 255, 1);
+    // box-shadow: 2px 0px 10px rgba(0, 0, 0, 0.349019607843137);
     display: flex;
     justify-content: space-between;
     .logo {
@@ -153,7 +153,7 @@
   .el-main {
     height: 100%;
     position: relative;
-    padding: 8px;
+    padding: 0;
     overflow: auto;
     .my_main_content {
       height: 100%;
@@ -227,7 +227,7 @@
       padding: 0;
       li {
         width: @width1;
-        height: 80px;
+        // height: 80px;
         padding: 10px 0;
         text-align: center;
         border: 1px solid @border;
@@ -325,21 +325,17 @@
 }
 
 .statistics_title {
-  height: 28px;
+  height: 36px;
   border-bottom: 1px solid #d8d8d8;
-  // position: relative;
-  // width: 100%;
-  // padding-top: 10px;
-  // padding-left: 20px;
   padding: 10px 20px 0;
-  // left: -20px;
-  background: #f5f7fa;
+  color: white;
+  // background: #f5f7fa;
   .el-icon-close {
     position: absolute;
     font-size: 20px;
     right: 0;
     top: 0;
-    color: #a5a3a3;
+    color: white;
     cursor: pointer;
   }
   .more {
@@ -347,12 +343,12 @@
     display: inline-block;
     width: 28px;
     cursor: pointer;
-    color: #a5a3a3;
+    color: white;
   }
   .box {
     height: 20px;
     width: 100%;
-    border-left: 3px solid;
+    border-left: 3px solid white;
     display: flex;
     line-height: 20px;
     justify-content: space-between;
@@ -396,7 +392,7 @@
       }
 
       .el-icon-delete {
-        color: red;
+        color: white;
       }
     }
 
@@ -428,6 +424,7 @@
             text-align: center;
             cursor: pointer;
             list-style: none;
+            color: #333333;
           }
 
           li.active {
@@ -638,6 +635,11 @@
 
     .hTxt9 {
       width: 100px;
+    }
+    .hTxt82,
+    .hTxt8,
+    .hTxt81 {
+      width: 90px;
     }
   }
   .zdpz_list_header .icons {
@@ -1503,15 +1505,17 @@
   padding: 0;
   border-radius: 0;
   .statistics_title {
+    box-sizing: border-box;
     display: none;
     position: absolute;
     padding: 5px 10px 0;
     // padding-top: 5px;
-    width: ~'calc(100% - 22px)';
+    width: 100%;
     top: 2px;
     left: 2px;
     z-index: 8;
-    background: #f5f8fb;
+    // background: #f5f8fb;
+    color: white;
   }
   .statisticsBox .statistics-content {
     padding: 0;
