--- a/src/components/BaoWeiCharts/css/index.less
+++ b/src/components/BaoWeiCharts/css/index.less
@@ -445,7 +445,7 @@
 // table
 #bw_table {
   td {
-    padding: 3px 0;
+    padding: 2px 3px;
   }
   th {
     padding: 0;
@@ -463,6 +463,7 @@
     }
   }
   .el-table__row .cell {
+    padding: 0;
     height: 26px;
     line-height: 26px;
     overflow: hidden;
@@ -1373,6 +1374,7 @@
 .top-bar-wrap {
   position: relative;
   z-index: 4;
+  padding: 5px 5px 0;
   .operation {
     position: absolute;
     top: 0;
@@ -1403,7 +1405,7 @@
       margin-left: 5px;
       padding: 5px;
       border-radius: 5px;
-      min-height: 80px;
+      // min-height: 80px;
       background: url(../images/u771.png);
       background-size: 100% 100%;
       color: white;
