--- a/src/components/BaoWeiCharts/css/index.less
+++ b/src/components/BaoWeiCharts/css/index.less
@@ -1536,3 +1536,31 @@
     }
   }
 }
+
+/*详情列表展示样式配置  主题2*/
+.destail-theme-1 {
+  border: none;
+  .detail_row {
+    .detail_col {
+      display: block;
+      margin: 3px 0;
+      .theme-2-list {
+        border: 1px solid #4d84b6;
+        border-radius: 3px;
+        width: ~'calc(100% - 10px)';
+        text-align: center;
+        margin-left: 5px;
+        .title {
+          background: #1890ff;
+          width: 100%;
+          color: white;
+          line-height: 25px;
+        }
+        .val {
+          width: 100%;
+          line-height: 25px;
+        }
+      }
+    }
+  }
+}
