--- a/src/components/BaoWeiCharts/css/index.css
+++ b/src/components/BaoWeiCharts/css/index.css
@@ -290,6 +290,7 @@
   margin-bottom: 0;
 }
 .statistics_title {
+  z-index: 999999;
   height: 36px;
   border-bottom: 1px solid #d8d8d8;
   padding: 10px 20px 0;
