--- a/src/components/BaoWeiCharts/css/index.css
+++ b/src/components/BaoWeiCharts/css/index.css
@@ -329,6 +329,7 @@
 }
 .statistics_title {
   z-index: 999999;
+  position: relative;
   height: 36px;
   border-bottom: 1px solid #d8d8d8;
   padding: 10px 20px 0;
